2007-08-08  Stefan Monnier  <monnier@iro.umontreal.ca>

	* man.el: Remove spurious * in docstrings.
	Merge defvars and toplevel setq-defaults.
	(Man-highlight-references0): Limit=nil rather than point-max.
	(Man-mode-map): Move initialization into the declaration.
	(Man-strip-page-headers, Man-unindent): Use dolist & inhibit-read-only.
	(Man-view-header-file): Use expand-file-name rather than concat.
	(Man-notify-when-ready, Man-bgproc-sentinel): Use with-current-buffer.

	* man.el (Man-next-section): Make sure we do not move backward.

2007-08-08  Vinicius Jose Latorre  <viniciusjl@ig.com.br>

	* ps-print.el (ps-default-fg, ps-default-bg): Docstring fix.
	(ps-begin-job): Use ps-default-fg and ps-default-bg only when
	ps-print-color-p is neither nil nor black-white.  Reported by Christian
	Schlauer <cs-muelleimer-rubbish.bin@arcor.de>.

2007-08-08  Stefan Monnier  <monnier@iro.umontreal.ca>

	* files.el (auto-mode-alist): Use the purecopied text (duh!).

2007-08-08  Andreas Schwab  <schwab@suse.de>

	* mail/mailabbrev.el (sendmail-pre-abbrev-expand-hook): Check for
	self-insert-command, not self-insert.

2007-08-08  Glenn Morris  <rgm@gnu.org>

	* emacs-lisp/checkdoc.el (checkdoc-ispell-lisp-words): Remove `iff'.

	* Replace `iff' in doc-strings and comments.

	* help-mode.el (help-make-xrefs): Search for symbol constituents,
	rather than just `-'.

2007-08-08  Martin Rudalics  <rudalics@gmx.at>

	* dired.el (dired-pop-to-buffer):
	* mouse-drag.el (mouse-drag-should-do-col-scrolling):
	* calendar/calendar.el (generate-calendar-window):
	* progmodes/compile.el (compilation-set-window-height):
	* textmodes/two-column.el (2C-two-columns, 2C-merge):
	Use window-full-width-p instead of comparing frame-width and
	window-width.

	* progmodes/compile.el (compilation-find-buffer): Remove extra
	argument in call to compilation-buffer-internal-p.

2007-08-07  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-handle-file-remote-p): Handle optional